Refs #1931: fix bug: More news link properly aligned to right on all browsers

--- a/cms_frontend/css/ie/ie8-custom.css
+++ b/cms_frontend/css/ie/ie8-custom.css
@@ -286,6 +286,8 @@ border-radius: 6px;
 
 .view-news-slideshow .view-footer a {
 top: 305px;
+right: 3px;
+padding-right: 0;
 }
 
 
