--- a/cms_frontend/css/mobile.css
+++ b/cms_frontend/css/mobile.css
@@ -49,10 +49,6 @@
   height: 374px;
   }
 
-  .view-news-slideshow .view-footer a {
-  right: 33px;
-  }
-
   .species-custom-image-author {
   text-align: center;
   }
